# icfpc2020

./: .gitignore  Cargo.toml  README.md  build.sh  chunks  fns.js  full.txt  known.txt  removed.txt  run.sh  unknown.txt
app/: fn_rust.rs  lc.rs  main.rs  modulation.rs  parser.rs  text_parser.rs  ts_gen.rs
fnjs/: main.js  messages.js  send.js  symbols.js
ts_eval/: build.sh  package-lock.json  package.json  run.sh  test.sh  tsconfig.json
ts_eval/src/: bot.ts  bot_main.ts  client.ts  common.ts  create.ts  galaxy.ts  list.ts  main.ts  messages.ts  modulation.ts  precalc.ts  send.ts  symbols.ts  test.ts
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
