[package]
name = "app"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "app"
path = "app/main.rs"

[[bin]]
name = "parser"
path = "app/parser.rs"

[[bin]]
name = "lc"
path = "app/lc.rs"

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
http-body = "0.3.1"
lamcal = "0.4.0"