[package]
name = "app"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "app"
path = "app/main.rs"

[[bin]]
name = "parser"
path = "app/parser.rs"

[[bin]]
name = "fn_rust"
path = "app/fn_rust.rs"

[[bin]]
name = "ts_gen"
path = "app/ts_gen.rs"

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
http-body = "0.3.1"
hyper-tls = "0.4.3"
lambda_calculus = "^3.0"